argo/header-routing/manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: rollout-gateway-stable
  namespace: gateway
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: rollout-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-gateway-canary
  namespace: gateway
spec:
  ports:
    - port: 3000
      name: http
  selector:
    app: rollout-gateway
